--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,7 +1,7 @@
 .button {
+    @include adaptiveValue("font-size", 16, 12);
+    line-height: math.div(20, 14);
     font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
     letter-spacing: 0.05em;
     background: $darkGray;
     border: 3px solid $orange;
