--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -8,6 +8,7 @@ body {
 }
 .section {
     &__title {
+        @include adaptiveValue("font-size", 30, 18);
         font-size: 30px;
         line-height: 37px;
         text-transform: uppercase;
@@ -39,48 +40,38 @@ body {
                 bottom: 0;
                 left: 50%;
                 transform: translateX(-50%);
-                width: 300px;
+                width: 100%;
+                max-width: 300px;
                 height: 3px;
                 background-color: $orange;
             }
         }
     }
 }
-@if ($responsiveType==1) {
-    // Отзывчивая
-    [class*="__container"] {
-        @if ($maxWidthContainer>0) {
-            max-width: rem($maxWidthContainer);
-            box-sizing: content-box;
-            margin: 0 auto;
-        }
-        @if ($containerPadding>0) {
-            padding: 0 rem(math.div($containerPadding, 2));
-        }
-    }
-} @else {
-    // По брейк-поинтам
-    [class*="__container"] {
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+    width: 6px; /* ширина для вертикального скролла */
+    height: 6px; /* высота для горизонтального скролла */
+    background-color: $black;
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+    background-color: $orange;
+    border-radius: 9em;
+    // box-shadow: inset 1px 1px 10px #f3faf7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #1e1038;
+}
+[class*="__container"] {
+    @if ($maxWidthContainer>0) {
+        max-width: rem($maxWidthContainer);
+        box-sizing: content-box;
         margin: 0 auto;
-        @if ($maxWidthContainer>0) {
-            max-width: rem($maxWidthContainer);
-            box-sizing: content-box;
-        } @else {
-            @if ($containerPadding>0) {
-                padding: 0 rem(math.div($containerPadding, 2));
-            }
-        }
-        @media (max-width: $pc) {
-            max-width: rem(970);
-        }
-        @media (max-width: $tablet) {
-            max-width: rem(750);
-        }
-        @media (max-width: $mobile) {
-            max-width: none;
-            @if ($containerPadding>0 and $maxWidthContainer>0) {
-                padding: 0 rem(math.div($containerPadding, 2));
-            }
-        }
+    }
+    @if ($containerPadding>0) {
+        padding: 0 rem(math.div($containerPadding, 2));
     }
 }
