--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -11,6 +11,8 @@ $robotoFonts: "Roboto", sans-serif;
 
 //Main vars
 $minWidth: 320;
+$maxWidth: 1920;
+
 $maxWidthContainer: 1230;
 $containerPadding: 30;
 // Ширина срабатывания первого брейкпоинта
