--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ body {
   background-color: #0f0f0f;
   color: #ffffff;
 }
+.lock body {
+  overflow: hidden;
+  touch-action: none;
+}
 
 .section__title {
   font-size: 30px;
@@ -200,6 +204,53 @@ body {
   padding: 0 0.9375rem;
 }
 
+.none {
+  display: none;
+}
+
+.icon-menu {
+  display: none;
+}
+@media (max-width: 61.99875em) {
+  .icon-menu {
+    display: block;
+    position: relative;
+    width: 1.875rem;
+    height: 1.125rem;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .icon-menu span, .icon-menu::before, .icon-menu::after {
+    content: "";
+    transition: all 0.3s ease 0s;
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 0.125rem;
+    background-color: #fff;
+  }
+  .icon-menu::before {
+    top: 0;
+  }
+  .icon-menu::after {
+    bottom: 0;
+  }
+  .icon-menu span {
+    top: calc(50% - 0.0625rem);
+  }
+  .menu-open .icon-menu span {
+    width: 0;
+  }
+  .menu-open .icon-menu::before {
+    top: calc(50% - 0.0625rem);
+    transform: rotate(-45deg);
+  }
+  .menu-open .icon-menu::after {
+    bottom: calc(50% - 0.0625rem);
+    transform: rotate(45deg);
+  }
+}
+
 .site {
   max-width: 1920px;
   margin: 0 auto;
@@ -207,11 +258,17 @@ body {
 }
 
 .header {
+  position: absolute;
+  width: 100%;
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.25;
   letter-spacing: 0.05em;
   padding: 12px 0px 8px 0px;
+}
+.header._header-scroll {
+  position: fixed;
+  top: -200px;
 }
 .header__container {
   display: flex;
@@ -324,6 +381,7 @@ body {
 }
 
 .hero {
+  margin-top: 94px;
   margin-bottom: 6rem;
 }
 .hero__wrapper {
@@ -539,13 +597,13 @@ body {
   display: flex;
   gap: 20px;
   height: 750px;
-  margin-top: 64px;
+  max-width: 996px;
+  margin: 64px auto 75px;
 }
 .service__text {
   line-height: 1.2272727273;
   text-align: justify;
   letter-spacing: 0.05em;
-  margin-top: 75px;
 }
 @supports (font-size: clamp( 1rem , 0.8723404255rem  +  0.6382978723vw , 1.375rem )) {
   .service__text {
@@ -582,6 +640,7 @@ body {
   width: 100%;
   display: grid;
   gap: 15px;
+  grid-template-rows: repeat(4, 1fr);
 }
 .service .tabs__title {
   cursor: pointer;
@@ -617,14 +676,15 @@ body {
   background-color: rgba(0, 0, 0, 0.85);
 }
 .service .tabs__content {
+  height: 100%;
   width: 100%;
-  min-width: 400px;
   border: 4px solid #ff7a00;
 }
 .service .tabs__body {
   height: 100%;
   position: relative;
-  padding: 85px 10px 20px 100px;
+  padding: 40px 0;
+  overflow: hidden;
 }
 .service .tabs__body-title {
   font-size: 24px;
@@ -639,6 +699,8 @@ body {
   gap: 15px;
   height: 600px;
   overflow-y: auto;
+  margin-top: 40px;
+  padding: 0px 20px 0px 70px;
 }
 .service .tabs__body-item {
   font-size: 18px;
@@ -676,51 +738,57 @@ body {
 }
 
 .connection {
-  background-image: url("../images/connection-bg.jpg");
-  background-size: contain;
-  background-position: bottom center;
-  background-repeat: no-repeat;
   margin-bottom: 128px;
 }
-.connection--bottom {
-  margin-bottom: 0;
+.connection__wrapper {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
+  background-image: url("../images/connection-bg.jpg");
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
 }
 .connection__container {
   position: relative;
-  height: 680px;
   display: flex;
   align-items: center;
 }
-.connection__container::before {
-  content: "";
-  background-repeat: no-repeat;
-  position: absolute;
-  bottom: 0;
+.connection__container--top {
+  height: 600px;
 }
-.connection__container--top::before {
-  background-image: url("../images/connection-img.png");
-  right: 0;
+.connection__container--top .connection__image {
   width: 600px;
   height: 672px;
+  background-image: url("../images/connection-img.png");
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 .connection__container--bottom {
-  margin-top: 40px;
-  justify-content: flex-end;
+  height: 680px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row-reverse;
 }
-.connection__container--bottom::before {
-  background-image: url("../images/connection-img-2.png");
-  left: 0;
+.connection__container--bottom .connection__image {
   width: 678px;
-  height: 700px;
+  height: 705px;
+  background-image: url("../images/connection-img-2.png");
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 .connection__form {
-  margin-top: 120px;
+  margin-top: 50px;
   max-width: 390px;
 }
 
 .about {
   position: relative;
   background-image: url("../images/about-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   z-index: 1;
   padding: 35px 0 88px;
   margin-bottom: 83px;
@@ -808,11 +876,12 @@ body {
   -moz-column-gap: 47px;
        column-gap: 47px;
   margin-top: 93px;
+  padding: 0 25px;
 }
 .gallery__item {
   position: relative;
-  width: 360px;
-  height: 360px;
+  min-height: 200px;
+  min-width: 200px;
 }
 .gallery__item-img {
   border-radius: 0.625rem;
@@ -831,8 +900,8 @@ body {
   position: absolute;
   right: -25px;
   bottom: -25px;
-  width: 350px;
-  height: 350px;
+  width: 100%;
+  height: 100%;
   border: 3px solid #ff7a00;
   border-radius: 10px;
   z-index: -1;
@@ -872,7 +941,10 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 5px;
   border-top: 6px solid #1c1d1e;
   border-left: 6px solid #1c1d1e;
 }
@@ -963,8 +1035,8 @@ body {
   letter-spacing: 0.05em;
   color: #ffffff;
 }
-.footer__item--background {
-  background-image: url("../images/icons/background.svg");
+.footer__item--phone {
+  background-image: url("../images/icons/phone.svg");
   background-repeat: no-repeat;
   background-size: contain;
   padding-left: 30px;
@@ -1056,12 +1128,31 @@ body {
   border-radius: 15px;
   padding: 25px 52px;
 }
+@media (max-width: 47.99875em) {
+  .form {
+    padding: 20px;
+  }
+}
 .form__title {
   font-size: 22px;
   line-height: 27px;
   letter-spacing: 0.05em;
   margin-bottom: 23px;
   text-align: center;
+}
+@media (max-width: 47.99875em) {
+  @supports (font-size: clamp( 0.9375rem , 0.7885638298rem  +  0.7446808511vw , 1.375rem )) {
+    .form__title {
+      font-size: clamp( 0.9375rem , 0.7885638298rem  +  0.7446808511vw , 1.375rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.9375rem , 0.7885638298rem  +  0.7446808511vw , 1.375rem )) {
+    .form__title {
+      font-size: calc(
+            0.9375rem + 0.4375 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
 }
 .form__field:not(:last-child) {
   margin-bottom: 18px;
@@ -1200,6 +1291,54 @@ body {
         );
     }
   }
+  @supports (gap: clamp( 3.125rem , 2.0611702128rem  +  5.3191489362vw , 6.25rem )) {
+    .about__container {
+      gap: clamp( 3.125rem , 2.0611702128rem  +  5.3191489362vw , 6.25rem );
+    }
+  }
+  @supports not (gap: clamp( 3.125rem , 2.0611702128rem  +  5.3191489362vw , 6.25rem )) {
+    .about__container {
+      gap: calc(
+            3.125rem + 3.125 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (font-size: clamp( 1rem , 0.829787234rem  +  0.8510638298vw , 1.5rem )) {
+    .gallery__item-bottom {
+      font-size: clamp( 1rem , 0.829787234rem  +  0.8510638298vw , 1.5rem );
+    }
+  }
+  @supports not (font-size: clamp( 1rem , 0.829787234rem  +  0.8510638298vw , 1.5rem )) {
+    .gallery__item-bottom {
+      font-size: calc(
+            1rem + 0.5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (height: clamp( 3.125rem , 2.6994680851rem  +  2.1276595745vw , 4.375rem )) {
+    .gallery__item-bottom {
+      height: clamp( 3.125rem , 2.6994680851rem  +  2.1276595745vw , 4.375rem );
+    }
+  }
+  @supports not (height: clamp( 3.125rem , 2.6994680851rem  +  2.1276595745vw , 4.375rem )) {
+    .gallery__item-bottom {
+      height: calc(
+            3.125rem + 1.25 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (margin-top: clamp( 2.5rem , 1.3723404255rem  +  5.6382978723vw , 5.8125rem )) {
+    .gallery__items {
+      margin-top: clamp( 2.5rem , 1.3723404255rem  +  5.6382978723vw , 5.8125rem );
+    }
+  }
+  @supports not (margin-top: clamp( 2.5rem , 1.3723404255rem  +  5.6382978723vw , 5.8125rem )) {
+    .gallery__items {
+      margin-top: calc(
+            2.5rem + 3.3125 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
 }
 @media (max-width: 61.99875em) {
   .nav {
@@ -1220,18 +1359,6 @@ body {
         );
     }
   }
-  @supports (margin-top: clamp( 2.5rem , 1.7553191489rem  +  3.7234042553vw , 4.6875rem )) {
-    .service__text {
-      margin-top: clamp( 2.5rem , 1.7553191489rem  +  3.7234042553vw , 4.6875rem );
-    }
-  }
-  @supports not (margin-top: clamp( 2.5rem , 1.7553191489rem  +  3.7234042553vw , 4.6875rem )) {
-    .service__text {
-      margin-top: calc(
-            2.5rem + 2.1875 * (100vw - 20rem) / 58.75
-        );
-    }
-  }
   @supports (margin-top: clamp( 1.5625rem , 1.0093085106rem  +  2.7659574468vw , 3.1875rem )) {
     .service__banner {
       margin-top: clamp( 1.5625rem , 1.0093085106rem  +  2.7659574468vw , 3.1875rem );
@@ -1243,6 +1370,251 @@ body {
             1.5625rem + 1.625 * (100vw - 20rem) / 58.75
         );
     }
+  }
+  .service .tabs__navigation {
+    max-width: 300px;
+  }
+  .service .tabs__body-list {
+    height: 400px;
+    gap: 10px;
+    padding: 0 20px;
+  }
+  @supports (font-size: clamp( 0.75rem , 0.6223404255rem  +  0.6382978723vw , 1.125rem )) {
+    .service .tabs__body-item {
+      font-size: clamp( 0.75rem , 0.6223404255rem  +  0.6382978723vw , 1.125rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.75rem , 0.6223404255rem  +  0.6382978723vw , 1.125rem )) {
+    .service .tabs__body-item {
+      font-size: calc(
+            0.75rem + 0.375 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  .about__main {
+    flex: 0 0 400px;
+  }
+  @supports (font-size: clamp( 2.5rem , 1.8617021277rem  +  3.1914893617vw , 4.375rem )) {
+    .about__title {
+      font-size: clamp( 2.5rem , 1.8617021277rem  +  3.1914893617vw , 4.375rem );
+    }
+  }
+  @supports not (font-size: clamp( 2.5rem , 1.8617021277rem  +  3.1914893617vw , 4.375rem )) {
+    .about__title {
+      font-size: calc(
+            2.5rem + 1.875 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (margin-bottom: clamp( 1.25rem , 0.6542553191rem  +  2.9787234043vw , 3rem )) {
+    .about__title {
+      margin-bottom: clamp( 1.25rem , 0.6542553191rem  +  2.9787234043vw , 3rem );
+    }
+  }
+  @supports not (margin-bottom: clamp( 1.25rem , 0.6542553191rem  +  2.9787234043vw , 3rem )) {
+    .about__title {
+      margin-bottom: calc(
+            1.25rem + 1.75 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (gap: clamp( 0.625rem , 0.4122340426rem  +  1.0638297872vw , 1.25rem )) {
+    .about__list {
+      gap: clamp( 0.625rem , 0.4122340426rem  +  1.0638297872vw , 1.25rem );
+    }
+  }
+  @supports not (gap: clamp( 0.625rem , 0.4122340426rem  +  1.0638297872vw , 1.25rem )) {
+    .about__list {
+      gap: calc(
+            0.625rem + 0.625 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (font-size: clamp( 0.75rem , 0.579787234rem  +  0.8510638298vw , 1.25rem )) {
+    .about__item {
+      font-size: clamp( 0.75rem , 0.579787234rem  +  0.8510638298vw , 1.25rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.75rem , 0.579787234rem  +  0.8510638298vw , 1.25rem )) {
+    .about__item {
+      font-size: calc(
+            0.75rem + 0.5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (width: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem )) {
+    .about__slide-item {
+      width: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem );
+    }
+  }
+  @supports not (width: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem )) {
+    .about__slide-item {
+      width: calc(
+            15rem + 5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (height: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem )) {
+    .about__slide-item {
+      height: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem );
+    }
+  }
+  @supports not (height: clamp( 15rem , 13.2978723404rem  +  8.5106382979vw , 20rem )) {
+    .about__slide-item {
+      height: calc(
+            15rem + 5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (font-size: clamp( 4.375rem , 3.7367021277rem  +  3.1914893617vw , 6.25rem )) {
+    .about__slide-item__num {
+      font-size: clamp( 4.375rem , 3.7367021277rem  +  3.1914893617vw , 6.25rem );
+    }
+  }
+  @supports not (font-size: clamp( 4.375rem , 3.7367021277rem  +  3.1914893617vw , 6.25rem )) {
+    .about__slide-item__num {
+      font-size: calc(
+            4.375rem + 1.875 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (font-size: clamp( 0.875rem , 0.789893617rem  +  0.4255319149vw , 1.125rem )) {
+    .about__slide-item__text {
+      font-size: clamp( 0.875rem , 0.789893617rem  +  0.4255319149vw , 1.125rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.875rem , 0.789893617rem  +  0.4255319149vw , 1.125rem )) {
+    .about__slide-item__text {
+      font-size: calc(
+            0.875rem + 0.25 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (padding-top: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem )) {
+    .price {
+      padding-top: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem );
+    }
+  }
+  @supports not (padding-top: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem )) {
+    .price {
+      padding-top: calc(
+            1.875rem + 1.5625 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (padding-bottom: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem )) {
+    .price {
+      padding-bottom: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem );
+    }
+  }
+  @supports not (padding-bottom: clamp( 1.875rem , 1.3430851064rem  +  2.6595744681vw , 3.4375rem )) {
+    .price {
+      padding-bottom: calc(
+            1.875rem + 1.5625 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (margin-top: clamp( 1.875rem , 1.0239361702rem  +  4.2553191489vw , 4.375rem )) {
+    .price-tabs {
+      margin-top: clamp( 1.875rem , 1.0239361702rem  +  4.2553191489vw , 4.375rem );
+    }
+  }
+  @supports not (margin-top: clamp( 1.875rem , 1.0239361702rem  +  4.2553191489vw , 4.375rem )) {
+    .price-tabs {
+      margin-top: calc(
+            1.875rem + 2.5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (font-size: clamp( 0.875rem , 0.7473404255rem  +  0.6382978723vw , 1.25rem )) {
+    .price-tabs__title {
+      font-size: clamp( 0.875rem , 0.7473404255rem  +  0.6382978723vw , 1.25rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.875rem , 0.7473404255rem  +  0.6382978723vw , 1.25rem )) {
+    .price-tabs__title {
+      font-size: calc(
+            0.875rem + 0.375 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  @supports (margin-bottom: clamp( 3.125rem , 1.4654255319rem  +  8.2978723404vw , 8rem )) {
+    .connection {
+      margin-bottom: clamp( 3.125rem , 1.4654255319rem  +  8.2978723404vw , 8rem );
+    }
+  }
+  @supports not (margin-bottom: clamp( 3.125rem , 1.4654255319rem  +  8.2978723404vw , 8rem )) {
+    .connection {
+      margin-bottom: calc(
+            3.125rem + 4.875 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  .connection__container {
+    display: flex;
+    justify-content: center;
+  }
+  @supports (height: clamp( 32.5rem , 30.7978723404rem  +  8.5106382979vw , 37.5rem )) {
+    .connection__container {
+      height: clamp( 32.5rem , 30.7978723404rem  +  8.5106382979vw , 37.5rem );
+    }
+  }
+  @supports not (height: clamp( 32.5rem , 30.7978723404rem  +  8.5106382979vw , 37.5rem )) {
+    .connection__container {
+      height: calc(
+            32.5rem + 5 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  .connection__image {
+    display: none;
+  }
+  .connection__form {
+    max-width: none;
+    margin: 0;
+  }
+  @supports (width: clamp( 20rem , 16.170212766rem  +  19.1489361702vw , 31.25rem )) {
+    .connection__form {
+      width: clamp( 20rem , 16.170212766rem  +  19.1489361702vw , 31.25rem );
+    }
+  }
+  @supports not (width: clamp( 20rem , 16.170212766rem  +  19.1489361702vw , 31.25rem )) {
+    .connection__form {
+      width: calc(
+            20rem + 11.25 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+}
+@media (max-width: 47.99875em) {
+  .header {
+    padding: 5px 0;
+  }
+  .header__contact {
+    font-size: 10px;
+  }
+  .work__items {
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    padding: 0;
+  }
+  .work__item {
+    padding-left: 70px;
+  }
+  .about {
+    padding: 30px 0px 30px 0px;
+  }
+  .about__container {
+    flex-direction: column;
+  }
+  .about__main {
+    flex: 0 0 350px;
+  }
+  .about__slider {
+    width: 100%;
+  }
+  .gallery__items {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (max-width: 56.25em) {
@@ -1274,25 +1646,15 @@ body {
     }
   }
 }
-@media (max-width: 47.99875em) {
-  .header {
-    padding: 5px 0;
+@media (max-width: 43.75em) {
+  .service {
+    padding: 40px 0;
   }
-  .header__contact {
-    font-size: 10px;
-  }
-  .work__items {
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    padding: 0;
-  }
-  .work__item {
-    padding-left: 70px;
-  }
-}
-@media (max-width: 37.5em) {
   .service__tabs {
     flex-direction: column;
+    height: auto;
+    margin-top: 28px;
+    margin-bottom: 28px;
   }
   @supports (padding-right: clamp( 0.0000000625rem , -0.851063746rem  +  4.2553190426vw , 2.5rem )) {
     .service__tabs {
@@ -1324,5 +1686,47 @@ body {
   .service .tabs__content {
     height: 100%;
     min-width: 100%;
+  }
+  .service .tabs__title {
+    min-height: 70px;
+  }
+  .service .tabs__title span {
+    max-width: 100%;
+  }
+  @supports (font-size: clamp( 1.125rem , 0.9973404255rem  +  0.6382978723vw , 1.5rem )) {
+    .service .tabs__body-title {
+      font-size: clamp( 1.125rem , 0.9973404255rem  +  0.6382978723vw , 1.5rem );
+    }
+  }
+  @supports not (font-size: clamp( 1.125rem , 0.9973404255rem  +  0.6382978723vw , 1.5rem )) {
+    .service .tabs__body-title {
+      font-size: calc(
+            1.125rem + 0.375 * (100vw - 20rem) / 58.75
+        );
+    }
+  }
+  .service .tabs__body-list {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 34.375em) {
+  .gallery__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .price-tabs {
+    display: none;
+  }
+  .price__button {
+    margin-top: 30px;
+    max-width: 100%;
+  }
+  .price__button button {
+    width: 100%;
+  }
+  .footer__main {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 16px;
   }
 }
