--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,12 +5,19 @@
 }
 
 .header {
+    position: absolute;
+    width: 100%;
     font-weight: 500;
     font-size: rem(16);
     line-height: math.div(20, 16);
     letter-spacing: 0.05em;
     padding: 12px 0px 8px 0px;
-
+    &._header-scroll {
+        position: fixed;
+        top: -200px;
+    }
+    &._header-show {
+    }
     &__container {
         display: flex;
         justify-content: space-between;
@@ -63,6 +70,7 @@
 }
 
 .hero {
+    margin-top: 94px;
     margin-bottom: rem(96);
     &__wrapper {
         position: relative;
@@ -226,7 +234,8 @@
         display: flex;
         gap: 20px;
         height: 750px;
-        margin-top: 64px;
+        max-width: 996px;
+        margin: 64px auto 75px;
     }
 
     &__text {
@@ -234,7 +243,6 @@
         line-height: math.div(27, 22);
         text-align: justify;
         letter-spacing: 0.05em;
-        margin-top: 75px;
     }
 
     &__banner {
@@ -251,6 +259,7 @@
             width: 100%;
             display: grid;
             gap: 15px;
+            grid-template-rows: repeat(4, 1fr);
         }
 
         &__title {
@@ -277,15 +286,16 @@
         }
 
         &__content {
+            height: 100%;
             width: 100%;
-            min-width: 400px;
             border: 4px solid $orange;
         }
 
         &__body {
             height: 100%;
             position: relative;
-            padding: 85px 10px 20px 100px;
+            padding: 40px 0;
+            overflow: hidden;
             &-title {
                 font-size: 24px;
                 line-height: 29px;
@@ -299,6 +309,8 @@
                 gap: 15px;
                 height: 600px;
                 overflow-y: auto;
+                margin-top: 40px;
+                padding: 0px 20px 0px 70px;
             }
             &-item {
                 font-size: 18px;
@@ -341,48 +353,49 @@
 }
 
 .connection {
-    background-image: url("../images/connection-bg.jpg");
-    background-size: contain;
-    background-position: bottom center;
-    background-repeat: no-repeat;
     margin-bottom: 128px;
-    // filter: blur(2.5px);
-    &--bottom {
-        margin-bottom: 0;
+    &__wrapper {
+        max-width: 1920px;
+        width: 100%;
+        margin: 0 auto;
+        background-image: url("../images/connection-bg.jpg");
+        background-size: cover;
+        background-position: bottom center;
+        background-repeat: no-repeat;
     }
     &__container {
         position: relative;
-        height: 680px;
         display: flex;
         align-items: center;
-        &::before {
-            content: "";
-            background-repeat: no-repeat;
-            position: absolute;
-            bottom: 0;
-        }
         &--top {
-            &::before {
-                background-image: url("../images/connection-img.png");
-                right: 0;
+            height: 600px;
+            .connection__image {
                 width: 600px;
                 height: 672px;
+                background-image: url("../images/connection-img.png");
+                position: absolute;
+                right: 0;
+                bottom: 0;
             }
         }
         &--bottom {
-            margin-top: 40px;
-            justify-content: flex-end;
-            &::before {
-                background-image: url("../images/connection-img-2.png");
-                left: 0;
+            height: 680px;
+            margin-top: 60px;
+            display: flex;
+            flex-direction: row-reverse;
+            .connection__image {
                 width: 678px;
-                height: 700px;
+                height: 705px;
+                background-image: url("../images/connection-img-2.png");
+                position: absolute;
+                left: 0;
+                bottom: 0;
             }
         }
     }
 
     &__form {
-        margin-top: 120px;
+        margin-top: 50px;
         max-width: 390px;
     }
 }
@@ -390,6 +403,8 @@
 .about {
     position: relative;
     background-image: url("../images/about-bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     z-index: 1;
     padding: 35px 0 88px;
     margin-bottom: 83px;
@@ -483,12 +498,13 @@
         row-gap: 72px;
         column-gap: 47px;
         margin-top: 93px;
+        padding: 0 25px;
     }
 
     &__item {
         position: relative;
-        width: 360px;
-        height: 360px;
+        min-height: 200px;
+        min-width: 200px;
         &-img {
             border-radius: rem(10);
             overflow: hidden;
@@ -506,8 +522,8 @@
             position: absolute;
             right: -25px;
             bottom: -25px;
-            width: 350px;
-            height: 350px;
+            width: 100%;
+            height: 100%;
             border: 3px solid #ff7a00;
             border-radius: 10px;
             z-index: -1;
@@ -548,7 +564,10 @@
             font-weight: 500;
             font-size: 20px;
             line-height: 24px;
-            padding: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 15px 5px;
             border-top: 6px solid $darkGray;
             border-left: 6px solid $darkGray;
             &:not(:first-child) {
@@ -644,8 +663,8 @@
         color: $white;
     }
 
-    &__item--background {
-        background-image: url("../images/icons/background.svg");
+    &__item--phone {
+        background-image: url("../images/icons/phone.svg");
         background-repeat: no-repeat;
         background-size: contain;
         padding-left: 30px;
