--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -5,6 +5,10 @@ body {
     font-family: $mainFont;
     background-color: $black;
     color: $white;
+    .lock & {
+        overflow: hidden;
+        touch-action: none;
+    }
 }
 .section {
     &__title {
@@ -73,5 +77,55 @@ body {
     }
     @if ($containerPadding>0) {
         padding: 0 rem(math.div($containerPadding, 2));
+    }
+}
+.none {
+    display: none;
+}
+.icon-menu {
+    display: none;
+    @media (max-width: $tablet) {
+        display: block;
+        position: relative;
+        width: rem(30);
+        height: rem(18);
+        cursor: pointer;
+        z-index: 5;
+        span,
+        &::before,
+        &::after {
+            content: "";
+            transition: all 0.3s ease 0s;
+            right: 0;
+            position: absolute;
+            width: 100%;
+            height: rem(2);
+            background-color: #fff;
+        }
+        &::before {
+            top: 0;
+        }
+        &::after {
+            bottom: 0;
+        }
+        span {
+            top: calc(50% - rem(1));
+        }
+        .menu-open & {
+            span {
+                width: 0;
+            }
+            &::before,
+            &::after {
+            }
+            &::before {
+                top: calc(50% - rem(1));
+                transform: rotate(-45deg);
+            }
+            &::after {
+                bottom: calc(50% - rem(1));
+                transform: rotate(45deg);
+            }
+        }
     }
 }
