--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,11 @@
 @import "_reset";
 @import "_mixins";
 @import "_vars";
+@import "_form";
+@import "_popup";
 @import "_style";
 @import "_home";
 @import "_buttons";
 @import "_swiper";
-@import "_form";
+@import "_spinner";
 @import "_media";
