--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,6 +5,8 @@
 }
 
 .header {
+    background-color: $black;
+
     position: absolute;
     width: 100%;
     font-weight: 500;
@@ -12,11 +14,23 @@
     line-height: math.div(20, 16);
     letter-spacing: 0.05em;
     padding: 12px 0px 8px 0px;
+    z-index: 99;
+    transform: translate(0, -100%);
+    transition: 0.4s ease 0s;
+    opacity: 0;
+    &._watcher-view {
+        transform: translate(0);
+        opacity: 1;
+    }
     &._header-scroll {
         position: fixed;
         top: -200px;
+        .header__logo {
+            width: 80px;
+        }
     }
     &._header-show {
+        top: 0;
     }
     &__container {
         display: flex;
@@ -24,7 +38,7 @@
         align-items: center;
     }
     &__logo {
-        @include adaptiveValue("width", 186, 80, 1200, 320);
+        width: 186px;
         flex-shrink: 0;
     }
     &__left {
@@ -52,7 +66,7 @@
     display: none;
 }
 
-.nav {
+.menu {
     &__list {
         display: flex;
         align-items: center;
@@ -63,14 +77,14 @@
         color: $white;
         transition: 0.3s ease 0s;
         &:hover,
-        &.is-active {
+        &._navigator-active {
             color: $orange;
         }
     }
 }
 
 .hero {
-    margin-top: 94px;
+    margin-top: 150px;
     margin-bottom: rem(96);
     &__wrapper {
         position: relative;
@@ -82,7 +96,8 @@
         justify-content: space-between;
         align-items: center;
         height: 520px;
-        &:after {
+
+        &::after {
             content: "";
             position: absolute;
             top: 0;
@@ -90,6 +105,11 @@
             border: 10px solid #ff7a00;
             width: 680px;
             height: 100%;
+            opacity: 0;
+            transition: opacity 0.8s ease 0s;
+        }
+        &._watcher-view::after {
+            opacity: 1;
         }
     }
 
@@ -106,22 +126,50 @@
         font-size: 60px;
         line-height: math.div(70, 60);
         max-width: 531px;
+        transform: translate(0, 80px);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     &__descr {
         font-size: 22px;
         line-height: 27px;
         max-width: 321px;
+        transform: translate(0, 80px);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     &__button {
         max-width: 300px;
         height: 50px;
+        transform: translate(0, 80px);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     &__slider {
         position: relative;
         z-index: 1;
+        transform: translate(100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
         &-nav {
             position: absolute;
             top: 50%;
@@ -204,6 +252,13 @@
         max-width: 475px;
         position: relative;
         padding: 15px 15px 15px 99px;
+        opacity: 0;
+        transition: 0.8s ease 0s;
+        transform: translate(100%, 0);
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
         &::before {
             @include adaptiveValue("font-size", 60, 30);
             @include adaptiveValue("line-height", 73, 40);
@@ -226,7 +281,7 @@
 }
 
 .service {
-    padding: 72px 0 111px 0;
+    margin: 72px 0 111px 0;
     &__container {
     }
 
@@ -243,6 +298,13 @@
         line-height: math.div(27, 22);
         text-align: justify;
         letter-spacing: 0.05em;
+        transform: translate(-100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     &__banner {
@@ -251,6 +313,13 @@
         color: $orange;
         margin-top: 51px;
         text-align: center;
+        transform: translate(100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     .tabs {
@@ -272,6 +341,13 @@
             font-size: 22px;
             line-height: 27px;
             letter-spacing: 0.05em;
+            transform: translate(-100%, 0);
+            transition: 0.8s ease 0s;
+            opacity: 0;
+            &._watcher-view {
+                transform: translate(0);
+                opacity: 1;
+            }
             span {
                 display: block;
                 max-width: 200px;
@@ -289,6 +365,13 @@
             height: 100%;
             width: 100%;
             border: 4px solid $orange;
+            transform: translate(100%, 0);
+            transition: 0.8s ease 0s;
+            opacity: 0;
+            &._watcher-view {
+                transform: translate(0);
+                opacity: 1;
+            }
         }
 
         &__body {
@@ -296,6 +379,7 @@
             position: relative;
             padding: 40px 0;
             overflow: hidden;
+
             &-title {
                 font-size: 24px;
                 line-height: 29px;
@@ -376,6 +460,13 @@
                 position: absolute;
                 right: 0;
                 bottom: 0;
+                transform: translate(100%, 0);
+                transition: 0.8s ease 0s;
+                opacity: 0;
+                &._watcher-view {
+                    transform: translate(0);
+                    opacity: 1;
+                }
             }
         }
         &--bottom {
@@ -390,6 +481,13 @@
                 position: absolute;
                 left: 0;
                 bottom: 0;
+                transform: translate(-100%, 0);
+                transition: 0.8s ease 0s;
+                opacity: 0;
+                &._watcher-view {
+                    transform: translate(0);
+                    opacity: 1;
+                }
             }
         }
     }
@@ -426,6 +524,13 @@
 
     &__main {
         flex: 0 0 488px;
+        transform: translate(-100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
 
     &__title {
@@ -454,6 +559,13 @@
 
     &__slider {
         height: 100%;
+        transform: translate(100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
     }
     &__slide {
         display: flex;
@@ -505,6 +617,13 @@
         position: relative;
         min-height: 200px;
         min-width: 200px;
+        transform: translate(-100%, 0);
+        transition: 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
         &-img {
             border-radius: rem(10);
             overflow: hidden;
@@ -529,7 +648,8 @@
             z-index: -1;
         }
         &-bottom {
-            background: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.5);
+            color: $white;
             height: 70px;
             width: 100%;
             position: absolute;
@@ -554,6 +674,11 @@
         margin: 0 auto;
         background-color: $gray;
         margin-top: 70px;
+        transition: opacity 0.8s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            opacity: 1;
+        }
         &__navigation {
             position: relative;
             display: grid;
@@ -606,6 +731,13 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        transform: translate(0, 100%);
+        transition: 0.7s ease 0s;
+        opacity: 0;
+        &._watcher-view {
+            transform: translate(0);
+            opacity: 1;
+        }
         button {
             padding: 16px 10px;
         }
@@ -643,6 +775,13 @@
 .footer {
     background-color: #0a0a0a;
     padding: 40px 0 16px;
+    transform: translate(0, 100%);
+    transition: 0.8s ease 0s;
+    opacity: 0;
+    &._watcher-view {
+        transform: translate(0);
+        opacity: 1;
+    }
     &__container {
     }
     &__main {
@@ -690,3 +829,11 @@
         padding-top: 5px;
     }
 }
+// .popup-gallery {
+//     box-sizing: border-box;
+//     &__content {
+//         max-width: 100%;
+//         height: 100vh;
+//         background-color: $white;
+//     }
+// }
